[package]
name = "phot"
version = "0.1.0"
authors = ["Aaron Seilis <aaron.seilis@seilis.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = "^1.0.38"
clap      = "^2.33.3"
dirs      = "^3.0.1"
sha1      = "^0.6.0"
thiserror = "^1.0.23"
